--- a/MEAN/JS Fundamentals/Trivia/index.html
+++ b/MEAN/JS Fundamentals/Trivia/index.html
@@ -12,7 +12,61 @@
 </head>
 
 <body>
-
+    <div class="wrapper">
+        <div class="top">
+            <div class="continue">
+                <h4>Continue with new questions</h4>
+            </div>
+            <div class="title">
+                <h1> Trivia Night</h1>
+            </div>
+            <div class="score">
+                <h1>points</h1>
+            </div>
+        </div>
+        <div class="category">
+            <div class="geography">
+                <h4>Geography</h4>
+            </div>
+            <div class="entertainment">
+                <h4>Entertainment</h4>
+            </div>
+            <div class="science">
+                <h4>Science</h4>
+            </div>
+        </div>
+        <div class="main">
+            <div class="tbox" id="1">
+                <h3 id="geo_easy">100</h3>
+            </div>
+            <div class="tbox" id="2">
+                <h3>100</h3>
+            </div>
+            <div class="tbox" id="3">
+                <h3>100</h3>
+            </div>
+            <div class="tbox" id="4">
+                <h3>200</h3>
+            </div>
+            <div class="tbox" id="5">
+                <h3>200</h3>
+            </div>
+            <div class="tbox" id="6">
+                <h3>200</h3>
+            </div>
+            <div class="tbox" id="7">
+                <h3>300</h3>
+            </div>
+            <div class="tbox" id="8">
+                <h3>300</h3>
+            </div>
+            <div class="tbox" id="9">
+                <h3>300</h3>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
+
+"<input type="radio" id="geo_true" name="choice" value="true"><label for="geo_true">True</label><br><input type="radio" id="geo_false" name="choice" value="false"><label for="geo_flase">False</label>"
