--- a/MEAN/JS OOP/Binary Search Tree/index.html
+++ b/MEAN/JS OOP/Binary Search Tree/index.html
@@ -54,7 +54,7 @@
         //     }
         // }
         /* Binary Search Tree */
-
+        //created class Node: with constructor parameters/properties (data, left = null, right =null) and can be inherit by using this.
         class Node {
             constructor(data, left = null, right = null) {
                 this.data = data;
@@ -62,212 +62,232 @@
                 this.right = right;
             }
         }
-
+        //created class BST: no parameters in its constructor but have a property of this.root
         class BST {
             constructor() {
-                this.root = null;
-            }
-            add(data) {
-                const node = this.root;
+                    this.root = null;
+                }
+                //BST's method "add(data)", constant node which is equal to the constructor's this.root
+            add(data) { //data = 9
+                const node = this.root; // this is equal to 9
+                //add() method has a condition to allocate the root, left, right properties of the object Node
                 if (node === null) {
-                    this.root = new Node(data);
+                    //if node is equal null then this.root will be equal to a new Node
+                    this.root = new Node(data); //this.root = 9
                     return;
                 } else {
+                    //and if node is not equal to null, then it will enter to a function which will determine whether it'll go to the left or night Node
                     const searchTree = function(node) {
+                        //if data is lesser than the node.data which is the root, then the new data will enter to the left Node
                         if (data < node.data) {
+                            //if the left Node is null
                             if (node.left === null) {
+                                //the new data will be enter to left Node
                                 node.left = new Node(data);
                                 return;
-                            } else if (node.left !== null) {
+                            }
+                            //else if left Node is not null
+                            else if (node.left !== null) {
+                                //run searchTree function to the left Node
                                 return searchTree(node.left);
                             }
-                        } else if (data > node.data) {
+                        }
+                        //if data is greater than node.data or this.root, then data will enter to the right Node
+                        else if (data > node.data) {
+                            //same procedure with the left Node but this time it'll be apply on the right Node
                             if (node.right === null) {
+                                //the new data will be enter to right Node
                                 node.right = new Node(data);
                                 return;
-                            } else if (node.right !== null) {
+                            }
+                            //else if right Node is not null
+                            else if (node.right !== null) {
+                                //run searchTree function to the right Node
                                 return searchTree(node.right);
                             }
-                        } else {
+                        }
+                        //else left or right Node will have null value
+                        else {
                             return null;
                         }
                     };
+                    //run searchTree to node again
                     return searchTree(node);
                 }
-            }
-            findMin() {
-                let current = this.root;
-                while (current.left !== null) {
-                    current = current.left;
-                }
-                return current.data;
-            }
-            findMax() {
-                let current = this.root;
-                while (current.right !== null) {
-                    current = current.right;
-                }
-                return current.data;
-            }
-            find(data) {
-                let current = this.root;
-                while (current.data !== data) {
-                    if (data < current.data) {
-                        current = current.left;
-                    } else {
-                        current = current.right;
-                    }
-                    if (current === null) {
-                        return null;
-                    }
-                }
-                return current;
-            }
-            isPresent(data) {
-                let current = this.root;
-                while (current) {
-                    if (data === current.data) {
-                        return true;
-                    }
-                    if (data < current.data) {
-                        current = current.left;
-                    } else {
-                        current = current.right;
-                    }
-                }
-                return false;
-            }
-            remove(data) {
-                const removeNode = function(node, data) {
-                    if (node == null) {
-                        return null;
-                    }
-                    if (data == node.data) {
-                        // node has no children 
-                        if (node.left == null && node.right == null) {
-                            return null;
-                        }
-                        // node has no left child 
-                        if (node.left == null) {
-                            return node.right;
-                        }
-                        // node has no right child 
-                        if (node.right == null) {
-                            return node.left;
-                        }
-                        // node has two children 
-                        var tempNode = node.right;
-                        while (tempNode.left !== null) {
-                            tempNode = tempNode.left;
-                        }
-                        node.data = tempNode.data;
-                        node.right = removeNode(node.right, tempNode.data);
-                        return node;
-                    } else if (data < node.data) {
-                        node.left = removeNode(node.left, data);
-                        return node;
-                    } else {
-                        node.right = removeNode(node.right, data);
-                        return node;
-                    }
-                }
-                this.root = removeNode(this.root, data);
-            }
-            isBalanced() {
-                return (this.findMinHeight() >= this.findMaxHeight() - 1)
-            }
-            findMinHeight(node = this.root) {
-                if (node == null) {
-                    return -1;
-                };
-                let left = this.findMinHeight(node.left);
-                let right = this.findMinHeight(node.right);
-                if (left < right) {
-                    return left + 1;
-                } else {
-                    return right + 1;
-                };
-            }
-            findMaxHeight(node = this.root) {
-                if (node == null) {
-                    return -1;
-                };
-                let left = this.findMaxHeight(node.left);
-                let right = this.findMaxHeight(node.right);
-                if (left > right) {
-                    return left + 1;
-                } else {
-                    return right + 1;
-                };
-            }
-            inOrder() {
-                if (this.root == null) {
-                    return null;
-                } else {
-                    var result = new Array();
+                // }
+                // findMin() {
+                //     let current = this.root;
+                //     while (current.left !== null) {
+                //         current = current.left;
+                //     }
+                //     return current.data;
+                // }
+                // findMax() {
+                //     let current = this.root;
+                //     while (current.right !== null) {
+                //         current = current.right;
+                //     }
+                //     return current.data;
+                // }
+                // find(data) {
+                //     let current = this.root;
+                //     while (current.data !== data) {
+                //         if (data < current.data) {
+                //             current = current.left;
+                //         } else {
+                //             current = current.right;
+                //         }
+                //         if (current === null) {
+                //             return null;
+                //         }
+                //     }
+                //     return current;
+                // }
+                // isPresent(data) {
+                //     let current = this.root;
+                //     while (current) {
+                //         if (data === current.data) {
+                //             return true;
+                //         }
+                //         if (data < current.data) {
+                //             current = current.left;
+                //         } else {
+                //             current = current.right;
+                //         }
+                //     }
+                //     return false;
+                // }
+                // remove(data) {
+                //     const removeNode = function(node, data) {
+                //         if (node == null) {
+                //             return null;
+                //         }
+                //         if (data == node.data) {
+                //             // node has no children 
+                //             if (node.left == null && node.right == null) {
+                //                 return null;
+                //             }
+                //             // node has no left child 
+                //             if (node.left == null) {
+                //                 return node.right;
+                //             }
+                //             // node has no right child 
+                //             if (node.right == null) {
+                //                 return node.left;
+                //             }
+                //             // node has two children 
+                //             var tempNode = node.right;
+                //             while (tempNode.left !== null) {
+                //                 tempNode = tempNode.left;
+                //             }
+                //             node.data = tempNode.data;
+                //             node.right = removeNode(node.right, tempNode.data);
+                //             return node;
+                //         } else if (data < node.data) {
+                //             node.left = removeNode(node.left, data);
+                //             return node;
+                //         } else {
+                //             node.right = removeNode(node.right, data);
+                //             return node;
+                //         }
+                //     }
+                //     this.root = removeNode(this.root, data);
+                // }
+                // isBalanced() {
+                //     return (this.findMinHeight() >= this.findMaxHeight() - 1)
+                // }
+                // findMinHeight(node = this.root) {
+                //     if (node == null) {
+                //         return -1;
+                //     };
+                //     let left = this.findMinHeight(node.left);
+                //     let right = this.findMinHeight(node.right);
+                //     if (left < right) {
+                //         return left + 1;
+                //     } else {
+                //         return right + 1;
+                //     };
+                // }
+                // findMaxHeight(node = this.root) {
+                //     if (node == null) {
+                //         return -1;
+                //     };
+                //     let left = this.findMaxHeight(node.left);
+                //     let right = this.findMaxHeight(node.right);
+                //     if (left > right) {
+                //         return left + 1;
+                //     } else {
+                //         return right + 1;
+                //     };
+                // }
+                // inOrder() {
+                //     if (this.root == null) {
+                //         return null;
+                //     } else {
+                //         var result = new Array();
 
-                    function traverseInOrder(node) {
-                        node.left && traverseInOrder(node.left);
-                        result.push(node.data);
-                        node.right && traverseInOrder(node.right);
-                    }
-                    traverseInOrder(this.root);
-                    return result;
-                };
-            }
-            preOrder() {
-                if (this.root == null) {
-                    return null;
-                } else {
-                    var result = new Array();
+                //         function traverseInOrder(node) {
+                //             node.left && traverseInOrder(node.left);
+                //             result.push(node.data);
+                //             node.right && traverseInOrder(node.right);
+                //         }
+                //         traverseInOrder(this.root);
+                //         return result;
+                //     };
+                // }
+                // preOrder() {
+                //     if (this.root == null) {
+                //         return null;
+                //     } else {
+                //         var result = new Array();
 
-                    function traversePreOrder(node) {
-                        result.push(node.data);
-                        node.left && traversePreOrder(node.left);
-                        node.right && traversePreOrder(node.right);
-                    };
-                    traversePreOrder(this.root);
-                    return result;
-                };
-            }
-            postOrder() {
-                if (this.root == null) {
-                    return null;
-                } else {
-                    var result = new Array();
+                //         function traversePreOrder(node) {
+                //             result.push(node.data);
+                //             node.left && traversePreOrder(node.left);
+                //             node.right && traversePreOrder(node.right);
+                //         };
+                //         traversePreOrder(this.root);
+                //         return result;
+                //     };
+                // }
+                // postOrder() {
+                //     if (this.root == null) {
+                //         return null;
+                //     } else {
+                //         var result = new Array();
 
-                    function traversePostOrder(node) {
-                        node.left && traversePostOrder(node.left);
-                        node.right && traversePostOrder(node.right);
-                        result.push(node.data);
-                    };
-                    traversePostOrder(this.root);
-                    return result;
-                }
-            }
+                //         function traversePostOrder(node) {
+                //             node.left && traversePostOrder(node.left);
+                //             node.right && traversePostOrder(node.right);
+                //             result.push(node.data);
+                //         };
+                //         traversePostOrder(this.root);
+                //         return result;
+                //     }
+                // }
 
-            levelOrder() {
-                let result = [];
-                let Q = [];
-                if (this.root != null) {
-                    Q.push(this.root);
-                    while (Q.length > 0) {
-                        let node = Q.shift();
-                        result.push(node.data);
-                        if (node.left != null) {
-                            Q.push(node.left);
-                        };
-                        if (node.right != null) {
-                            Q.push(node.right);
-                        };
-                    };
-                    return result;
-                } else {
-                    return null;
-                };
-            };
+                // levelOrder() {
+                //     let result = [];
+                //     let Q = [];
+                //     if (this.root != null) {
+                //         Q.push(this.root);
+                //         while (Q.length > 0) {
+                //             let node = Q.shift();
+                //             result.push(node.data);
+                //             if (node.left != null) {
+                //                 Q.push(node.left);
+                //             };
+                //             if (node.right != null) {
+                //                 Q.push(node.right);
+                //             };
+                //         };
+                //         return result;
+                //     } else {
+                //         return null;
+                //     };
+                // };
+            }
         }
-
 
 
         const bst = new BST();
@@ -282,18 +302,19 @@
         bst.add(7);
         bst.add(20);
 
-        console.log(bst.findMinHeight());
-        console.log(bst.findMaxHeight());
-        console.log(bst.isBalanced());
-        bst.add(10);
-        console.log(bst.findMinHeight());
-        console.log(bst.findMaxHeight());
-        console.log(bst.isBalanced());
-        console.log('inOrder: ' + bst.inOrder());
-        console.log('preOrder: ' + bst.preOrder());
-        console.log('postOrder: ' + bst.postOrder());
+        console.log(bst)
+            // console.log(bst.findMinHeight());
+            // console.log(bst.findMaxHeight());
+            // console.log(bst.isBalanced());
+            // bst.add(10);
+            // console.log(bst.findMinHeight());
+            // console.log(bst.findMaxHeight());
+            // console.log(bst.isBalanced());
+            // console.log('inOrder: ' + bst.inOrder());
+            // console.log('preOrder: ' + bst.preOrder());
+            // console.log('postOrder: ' + bst.postOrder());
 
-        console.log('levelOrder: ' + bst.levelOrder());
+        // console.log('levelOrder: ' + bst.levelOrder());
     </script>
 
 </body>
